# sql-transforms

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  SQL_SUPPORT.md  TODO.md  VISION.md  justfile  mise.toml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  claude-review.yml
backlog/: config.yml
backlog/decisions/: decision-1 - DataFusion-is-the-parity-oracle.md  decision-2 - Error-type-parity-across-engines-is-a-non-goal.md  decision-3 - Opaque-transform-work-split-Part-1-engine-capability-then-Part-2-SQL-surface.md  decision-4 - sklearn-strategy-native-reimplementation-is-the-goal-opaque-fallback-first.md  decision-5 - M1-ordering-recursive-composition-before-sklearn-execution-model-spec-deferred.md  decision-5 - ordering-recursive-composition-before-sklearn-execution-model-spec-deferred.md  decision-6 - slt-conformance-corpus-and-DoD-hook.md  decision-7 - two-engine-framing-codegen-vs-native-default-open.md  decision-7 - two-engine-framing-native-default-codegen-opt-in.md
backlog/docs/: doc-1 - DataFusion-function-catalogue.md  doc-10 - Feature-output-model-—-records-dense-sparse-design.md  doc-2 - sklearn-transformer-implementation-plan.md  doc-3 - Vision.md  doc-4 - Epic-B-multi-language-inference-runtimes-design-brief.md  doc-4 - multi-language-inference-runtimes-design-brief.md  doc-5 - SQL-conformance-harness-design-brief-parked.md  doc-6 - Serving-path-benchmarks-ONNX-vs-Rust-interpreter-vs-Python-codegen-vs-WASM.md  doc-7 - Transformer-execution-model-—-UDF-UDAF-macros-composition.md  doc-8 - Composition-—-transformcol-references-mechanics-and-deferred-slices.md  doc-9 - Rich-type-system-and-UNNEST-—-status-and-deferred-edges.md
backlog/drafts/: draft-1 - Estimator-interface-compliance-compose-in-hook-1.md  (+19 more)
docs/: BACKLOG.md  DATAFUSION_FUNCTIONS.md  ROADMAP.md  SKLEARN_TRANSFORMERS.md  SQL_SUPPORT.md  VISION.md
scripts/: gen_datafusion_catalogue.py
sql_transform/: __init__.py  __init___test.py  _batch.py  _batch_test.py  _codegen.py  _codegen_plan.py  _codegen_plan_test.py  _codegen_runtime.py  _codegen_runtime_test.py  _codegen_test.py  _compose.py  _compose_test.py  _interpreter.pyi  _rewrite.py  _rewrite_test.py  _schema.py  _schema_test.py  _sql.py  _sql_test.py  _state.py  _state_test.py  _transformer_ref.py  _transformer_udf.py  context.py  context_test.py  data_formats.py  data_formats_test.py  function_registry.py  parser.py  parser_test.py  sklearn_integration.py  test_core.py  test_sklearn.py  transformer.py  transformer_test.py
sql_transform/_codegen/: engine.py  (+6 more)
src/: expr.rs  expr_build.rs  lib.rs  lookup.rs  plan.rs  schema.rs  types.rs
tests/: _native_guard.py  conftest.py  differential.py  test_backend_wiring.py  test_case_window_integration.py  test_codegen_coverage.py  test_diff_case.py  test_diff_composition.py  test_diff_errors.py  test_diff_expressions.py  test_diff_identifier_folding.py  test_diff_relational.py  test_diff_rust_bugs.py  test_diff_transformer_callout.py  test_diff_types.py  test_differential_selftest.py  test_interpreter.py  test_median_quantile.py  test_native_guard.py  test_native_model_fields_probe.py  test_transformer_callout_infer.py  test_transformer_case.py  test_transformer_ref.py  test_transformer_udf.py
(+102 files in other folders)
