[project]
name = "sql-transform"
version = "0.1.0"
description = "SQL-based data transforms on DataFusion"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datafusion>=46.0.0",
    "pyarrow>=19.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=9.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["**/*_test.py"]

[tool.hatch.build.targets.wheel]
packages = ["./sql_transform"]

[tool.ruff]
fix = true
lint.select = ["E", "F", "B", "I", "UP", "C4", "S"]
lint.ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"*test*.py" = ["S608"]

[tool.pytest.ini_options]
python_files = ["*_test.py"]