[project]
name = "sql-transform"
version = "0.1.0"
description = "SQL-based data transforms on DataFusion"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datafusion>=46.0.0",
    "pyarrow>=19.0",
    "pydantic>=2.0,<3.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=9.2.0",
    "maturin>=1.14,<2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]

[build-system]
requires = ["maturin>=1.14,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "sql_transform._interpreter"
python-source = "."
exclude = ["**/*_test.py", "tests/**"]

[tool.ruff]
fix = true
lint.select = ["E", "F", "B", "I", "UP", "C4", "S"]
lint.ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"*test*.py" = ["S608"]
"_state.py" = ["S608"]

[tool.pytest.ini_options]
python_files = ["*_test.py", "test_*.py"]